[package]
name = "pbkdf2-identifier-cli"
version = "0.0.0"
license = "MIT OR Apache-2.0"
description = "A crate to identify the parameters used to generate a PBKDF2 hash. Currently a placeholder for the CLI tool."
repository = "https://github.com/zer0x64/pbkdf2-identifier"
homepage = "https://github.com/zer0x64/pbkdf2-identifier"
authors = ["zer0x64 <dugre.philippe@hotmail.com>"]
edition = "2018"

[dependencies]
