[package]
name = "pbkdf2-identifier-cli"
version = "0.0.3"
readme = "../README.md"
license = "MIT/Apache-2.0"
description = "A crate to identify the parameters used to generate a PBKDF2 hash."
repository = "https://github.com/zer0x64/pbkdf2-identifier"
homepage = "https://github.com/zer0x64/pbkdf2-identifier"
authors = ["zer0x64"]
edition = "2018"

[dependencies]
base64 = "0.11.0"
clap = "2.33.0"
hex = "0.4.0"
pbkdf2-identifier = {version="0.0.3", path="../pbkdf2-identifier"}

[[bin]]
name = "pbkdf2-identifier"
path = "src/main.rs"