[package]
name = "pbkdf2-identifier-cli"
version = "0.0.7"
readme = "../README.md"
license = "MIT/Apache-2.0"
description = "A crate to identify the parameters used to generate a PBKDF2 hash."
repository = "https://github.com/zer0x64/pbkdf2-identifier"
homepage = "https://github.com/zer0x64/pbkdf2-identifier"
authors = ["zer0x64"]
edition = "2021"

[dependencies]
base64 = "0.11.0"
clap = { version = "3.1.5", features = ["derive"] }
hex = "0.4.0"
pbkdf2-identifier = { path = "../pbkdf2-identifier", features = ["parallel"]}

[[bin]]
name = "pbkdf2-identifier"
path = "src/main.rs"
